# AMA-Agent-Teammate

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
apps/api/: README.md
apps/web/: README.md  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: adr-004-knowledge-retrieval.md  analysis-evaluation-guide.md  analysis-output-contract.md  analysis-skill-framework.md  architecture.md  assumptions.md  data-governance.md  data-model.md  development-plan.md  governed-assets.md  jira-readonly-integration.md  knowledge-skill-memory.md  langgraph-design.md  licensing.md  mvp-acceptance-criteria.md  observability.md  phase-1-implementation.md  phase-2-implementation.md  phase-3-implementation.md  product-scope.md  security-model.md  semantic-metadata-guide.md  skill-authoring-guide.md  super-agent-930-knowledge.md  super-agent-learned-metrics.md  super-agent-uat-schema-gap.md  super-agent-uat-source-inventory.md
evals/: generic_cases.yaml
infra/: README.md
knowledge/: business_rules.yaml  relationships.yaml
knowledge/data_sources/: air_activity.yaml  air_cases.yaml  demo_marketing.yaml  demo_operations.yaml  demo_sales.yaml  super_agent.yaml  (+2 more)
policies/: analysis_policy.yaml  evidence_policy.yaml  sql_policy.yaml
scripts/: catalog_super_agent_uat.py  evaluate_analysis_skills.py  validate_analysis_skills.py  validate_semantic_metadata.py
skills/: README.md
tests/: README.md
(+194 files in other folders)
