[project]
name = "ama-data-analysis-teammate"
version = "0.3.0"
description = "Governed chat, analysis, Knowledge, Skills, and Memory for AMA Data Analysis Teammate"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aiosqlite>=0.21.0,<1",
  "azure-identity>=1.23.0,<2",
  "duckdb>=1.3,<2",
  "fastapi>=0.116.0,<1",
  "langgraph>=1.0.0,<2",
  "langgraph-checkpoint-sqlite>=3.0.0,<4",
  "openai>=2.0.0,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.3,<4",
  "pydantic-settings>=2.10.0,<3",
  "pymysql[rsa]>=1.1.2,<2",
  "pypdf>=5.0,<7",
  "python-docx>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6.0,<7",
  "sqlalchemy[asyncio]>=2.0.40,<3",
  "sqlglot>=27,<29",
  "uvicorn[standard]>=0.35.0,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1",
  "mypy>=1.17.0,<2",
  "pandas-stubs>=3.0,<4",
  "pytest>=8.4.0,<9",
  "pytest-asyncio>=1.1.0,<2",
  "reportlab>=4.0,<5",
  "ruff>=0.12.0,<1",
  "types-openpyxl>=3.1,<4",
  "types-pyyaml>=6.0,<7",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["apps/api/src"]
testpaths = ["apps/api/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api/src", "apps/api/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "apps/api/src"
packages = ["ama_teammate"]

[[tool.mypy.overrides]]
module = ["langgraph.*"]
ignore_missing_imports = true
